fix some css to work on safari

--- a/client/src/components/WrappedMessage.css
+++ b/client/src/components/WrappedMessage.css
@@ -1,5 +1,5 @@
 .wrapped-message {
-    all: inherit;
+    height: 100%;
     position: relative;
 }
 
