--- a/client/src/input_components/TextInput.css
+++ b/client/src/input_components/TextInput.css
@@ -28,5 +28,5 @@
 
 .form-group.md .form-control:disabled {
     color: var(--unselected-color);
-    background-color: unset;
+    background-color: white;
 }
